# utxterm

./: .gitignore  NEWS.md  README.md  pyproject.toml
example/: diagram.puml  diagram.utxt
src/utxterm/: __init__.py  _argparse.py  _colors.py  _pumlcallable.py  _read_file.py  _render_puml.py  _replace_formatting.py  _validate.py
