[project]
name = "utxterm"
version = "0.1.0"
description = "Render unicode puml diagrams in your terminal with color."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = true

[tool.ruff]
line-length = 80

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
