[project]
name = "utxterm"
version = "0.2.0"
description = "Render unicode puml diagrams in your terminal with color."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
utxterm = "utxterm:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 80

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
